   between two bridged channels, the 'extra' JSON blob contains the primary
   bridge unique identifier, the secondary channel name, and the secondary
   bridge unique identifier. For transfers that occur between a bridged channel
   and a channel running an app, the 'extra' JSON blob contains the primary
   bridge unique identifier, the secondary channel name, and the app name.

Features
-------------------
 * The BRIDGE_FEATURES channel variable would previously only set features for
   the calling party and would set this feature regardless of whether the
   feature was in caps or in lowercase. Use of a caps feature for a letter
   will now apply the feature to the calling party while use of a lowercase
   letter will apply that feature to the called party.

 * Add support for automixmon to the BRIDGE_FEATURES channel variable.

 * Parking has been pulled from core and placed into a separate module called
   res_parking. See Parking changes below for more details.

 * You can now have the settings for a channel updated using the FEATURE()
   and FEATUREMAP() functions inherited to child channels by setting
   FEATURE(inherit)=yes.

 * automixmon now supports additional channel variables from automon including:
   TOUCH_MIXMONITOR_PREFIX, TOUCH_MIXMONITOR_MESSAGE_START,
   and TOUCH_MIXMONITOR_MESSAGE_STOP

 * A new general features.conf option 'recordingfailsound' has been added which
   allowssetting a failure sound for a user tries to invoke a recording feature
   such as automon or automixmon and it fails.

Logging
-------------------
 * When performing queue pause/unpause on an interface without specifying an
   individual queue, the PAUSEALL/UNPAUSEALL event will only be logged if at
   least one member of any queue exists for that interface.

 * Added the 'queue_log_realtime_use_gmt' option to have timestamps in GMT
   for realtime queue log entries.

Parking
-------------------
 * Parking is now implemented as a module instead of as core functionality.